--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -124,7 +124,7 @@
                       <button type="button" id="${card_values.name.split(" ")[0]}_question" class="btn card-text text-muted text-end" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="margin-left: auto; font-size: 36px; margin-right: 10px; width: 50px">?</button>
                     </div>
                 </div>
-                </div>
+                </div>`
 
         let result = new DOMParser().parseFromString(template, "text/html").getElementsByTagName("div")[0] //парсинг строки в html код
 
