fid capture tabs

--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -19,10 +19,12 @@
 {% block content %}
 {% endblock %}
 
+integrity="sha384-M1bY/1tlyQwz9Rig+2ki6w+xgmmmY5fio+VAU1B+9CdmBlSVPBZ1VQgvI4cj8D8Y"
 {% include 'footer.html' %}
 <script src="{% static 'bootstrap.bundle.min.js' %}"
-        integrity="sha384-M1bY/1tlyQwz9Rig+2ki6w+xgmmmY5fio+VAU1B+9CdmBlSVPBZ1VQgvI4cj8D8Y"
         crossorigin="anonymous"></script>
+
+<script src="{% static 'script.js' %}" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
     integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
     crossorigin="anonymous"></script>
