--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -56,7 +56,7 @@
             </div>
             <div id="functions" class="offset-0">
             </div>
-            <input href="" class="btn btn-primary col-4 offset-4 p-3 fs-4" type="submit" value="Отправить">
+            <input href="" class="btn btn-primary col-4 offset-4 p-3 fs-4 button large round alert" type="submit" value="Отправить">
         </form>
     </div>
 </div>
