--- a/first/templates/message.html
+++ b/first/templates/message.html
@@ -1,23 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" style="font-size: 18px; margin: 0; padding: 0;">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Message</title>
 </head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-10 offset-1">
-                <div style="width: 100%; background-color: #023653;">
-                    <img src="{% static 'media/main_logo.png' %}" alt="Logo" width="300" height="300" class="d-inline-block align-text-top">
-                </div>
-                <p>Здравствуйте, ваша жалоба принята на рассмотрение и будет рассмотрена в ближайшее время.
-                    С уважением, команда BotGod.</p>
-            </div>
-        </div>
-    </div>
+<body style="margin: 0; padding: 0;">
+    <header style="padding: 1%; margin: 0; color: white; background-color: #023653; margin-bottom: 5%;">
+        <h1 style="margin: auto; text-align: center;">BOTGOD</h1>
+    </header>
+    <main style="width: 70%; margin: 0 auto; border: 2px solid #023653; border-radius: 30px; padding: 1%;">
+        <p>Ваше сообщение очень важно для нас. Оно будет рассмотрено в ближайшее время и на вашу почту будет направлен ответ. С уважением, команда BotGod.</p>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
