--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -9,7 +9,7 @@
           <div class="card-body text-center">
             <img src="{{ user.photo_url }}" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-              <h5>{{user.hash}}</h5>
+              <h5>{{backends.associated}}</h5>
             <h5 class="my-3">{{ request.user.first_name }} {{ request.user.last_name }}</h5>
           </div>
         </div>
@@ -59,7 +59,7 @@
                             <p class="text-muted mb-0">{{ bot.created_at }}</p>
                         </div>
                         <div class="col-sm-3">
-                            <a class="btn btn-primary offset-6" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
+                            <a class="btn btn-primary col-3 offset-6" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
                                 Скачать бота
                             </a>
                         </div>
