--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -10,7 +10,7 @@
             <img src="{{ user.photo_url }}" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
               {% for associated in backends.associated %}
-                  <li>Extra: {{ associated.extra_data[photo_url] }}</li>
+                  <li>{{ associated.extra_data}}</li>
               {% endfor %}
             <h5 class="my-3">{{ request.user.first_name }} {{ request.user.last_name }}</h5>
           </div>
@@ -60,7 +60,7 @@
                         <div class="col-sm-3">
                             <p class="text-muted mb-0">{{ bot.created_at }}</p>
                         </div>
-                        <div class="col-sm-3 offset-3">
+                        <div class="col-sm-6 offset-3">
                             <a class="btn btn-primary col-3" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
                                 Скачать бота
                             </a>
