--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -9,7 +9,7 @@
           <div class="card-body text-center">
             <img src="{{ user.photo_url }}" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-                  <li id="tg_data" style="display: none;">{{ backends.associated[0].extra_data}}</li>
+                  <li id="tg_data" style="display: none;">{{ backends.associated.extra_data}}</li>
             <h5 class="my-3">{{ request.user.first_name }} {{ request.user.last_name }}</h5>
           </div>
         </div>
