Add of ge t tg image url

--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -9,7 +9,9 @@
           <div class="card-body text-center">
             <img src="{{ user.photo_url }}" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-                  <li id="tg_data" style="display: none;">{{ backends.associated.extra_data}}</li>
+              {% for associate in  backends.associated%}
+                <li id="tg_response" style="display: none;">{{ associate.extra_data}}</li>
+              {% endfor %}
             <h5 class="my-3">{{ request.user.first_name }} {{ request.user.last_name }}</h5>
           </div>
         </div>
@@ -82,7 +84,7 @@
   // 'photo_url': ['https://t.me/i/userpic/320/Lp6c03i3aYHMrmcvMPuK14KXQsPs_8kk3X1qG7lgXMg.jpg'], 
   //'auth_date': ['1682535097'], 
   //'hash': ['e258c0fcd556be776d66e58c6cc1664b3619e89f65c783fe7d18e4589250a343']}
-  let tg_data = tg_data.innerHTML
+  let tg_data = tg_response.innerHTML
   parsed_data = json.loads(tg_data.replace("'",'"'))
   console.log(parsed_data)
   let index = 0
