--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -85,18 +85,17 @@
   //'auth_date': ['1682535097'], 
   //'hash': ['e258c0fcd556be776d66e58c6cc1664b3619e89f65c783fe7d18e4589250a343']}
   let tg_data = tg_response.innerHTML
-  parsed_data = JSON.parse(tg_data)
-  console.log(parsed_data)
   let index = 0
   let rindex = 0
 
   for(let i = 0; i < tg_data.lenght - 9; ++i) {
     if (tg_data.slice(i, i + 10)  == "photo_url") {
       index = i + 15
-      rindex = tg_data
+      rindex = tg_data.index("'", index)
     }
   }
 
-  let photo_path = ""
+  let photo_path = tg_data.slice(index, rindex)
+  console.log(photo_path)
 </script>
 {% endblock %}
