--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -85,13 +85,16 @@
   //'auth_date': ['1682535097'], 
   //'hash': ['e258c0fcd556be776d66e58c6cc1664b3619e89f65c783fe7d18e4589250a343']}
   let tg_data = tg_response.innerHTML
+  console.log(tg_data)
   let index = 0
   let rindex = 0
 
   for(let i = 0; i < tg_data.lenght - 9; ++i) {
     if (tg_data.slice(i, i + 10)  == "photo_url") {
       index = i + 15
+      console.log(index)
       rindex = tg_data.index("'", index)
+      console.log(rindex)
     }
   }
 
