Add of ge t tg image url

--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -89,6 +89,8 @@
   let index = 0
   let rindex = 0
 
+  console.log(tg_data.lenght - 9)
+
   for(let i = 0; i < tg_data.lenght - 9; ++i) {
     if (tg_data.slice(i, i + 10)  == "photo_url") {
       index = i + 15
