Add of ge t tg image url

--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -89,9 +89,9 @@
   let index = 0
   let rindex = 0
 
-  console.log(tg_data.lenght - 9)
+  console.log(tg_data.length)
 
-  for(let i = 0; i < tg_data.lenght - 9; ++i) {
+  for(let i = 0; i < tg_data.length - 9; ++i) {
     if (tg_data.slice(i, i + 10)  == "photo_url") {
       index = i + 15
       console.log(index)
