change first name and last name to username

--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -24,7 +24,7 @@
                 <p class="mb-0">Имя</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">{{ request.user.first_name }} {{ request.user.last_name }}</p>
+                <p class="text-muted mb-0">{{ request.user.username }}</p>
               </div>
             </div>
             <hr>
