--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -68,9 +68,7 @@
                         </div>
                         <form action="" method="post">
                         <div class="col-sm-3">
-                          <input type="submit" name="delete_bot" class="btn btn-danger">
-                              Удалить бота
-                        </input>
+                          <input type="submit" name="delete_bot" class="btn btn-danger" value="Удалить бота">
                       </div>
                     </form>
                     </div>
