Improve generation code

--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -61,7 +61,7 @@
                             <p class="text-muted mb-0">{{ bot.created_at }}</p>
                         </div>
                         <div class="col-sm-3">
-                            <a class="btn btn-primary" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
+                            <a class="btn btn-primary" href="/download_bot/?preset={{bot.bot_name}}">
                                 Скачать бота
                             </a>
                         </div>
