--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -12,12 +12,7 @@
             {% else %}
                 <div class="container">
                     <div class="row text-center col-10 offset-1">
-                        <div class="col">
-                            <a class="text-center" href="/login/"><input type="button" style="height:60px; width:80%" class="shadow btn btn-primary fs-5" value="Вход"></a>
-                        </div>
-                        <div class="col">
-                            <a class="text-center" href="/registration/"><input type="button" style="height:60px; width:80%" class="shadow btn btn-primary fs-5" value="Регистрация"></a>
-                        </div>
+                        <a class="text-center" href="/telegram_auth/"><input type="button" style="height:60px; width:80%" class="shadow btn btn-primary fs-5" value="Авторизация"></a>
                   </div>
                 </div>
             {% endif %}
