--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -26,14 +26,9 @@
                     <li class="nav-item=">
                         <a class="nav-link nav-hover text-light m-2  fs-5" href="/profile/">Профиль</a>
                     </li>
-                    <li class="vl"></li>
                 {%else%}
                     <li class="nav-item=">
-                        <a class="nav-link nav-hover text-light m-2  fs-5" href="/registration/">Регистрация</a>
-                    </li>
-                    <li class="vl"></li>
-                    <li class="nav-item=">
-                        <a class="nav-link nav-hover text-light m-2 fs-5" href="/login/">Войти</a>
+                        <a class="nav-link nav-hover text-light m-2  fs-5" href="/telegram_auth/">Авторизация</a>
                     </li>
                 {% endif %}
           </ul>
