--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -5,7 +5,7 @@
   <div class="container py-5">
     <div class="row">
       <div class="col-lg-4">
-        <div class="card mb-4">
+        <div class="card">
           <div class="card-body text-center">
             <img src="{{ user.photo_url }}" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;" id="photo">
@@ -21,7 +21,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Имя</p>
+                <p class="">Имя</p>
               </div>
               <div class="col-sm-9">
                 <p class="text-muted mb-0">{{ request.user.first_name }} {{ request.user.last_name }}</p>
@@ -61,7 +61,7 @@
                       <hr>
                       <div class="row">
                         <div class="col-8 offset-2">
-                          <h2>Вы пока не создали ни одного бота. <a href="../create_bot/">Сделайте это прямо сейчас!</a></h2>
+                          <h3>Вы пока не создали ни одного бота. <a href="../create_bot/">Сделайте это прямо сейчас!</a></h3>
                         </div>
                       </div>
                       <hr>
