--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -39,22 +39,22 @@
                   {% for bot in bots %}
                     <hr>
                       <div class="row">
-                          <div class="col-2">
+                          <div class="">
                               <p class="mb-0">@{{ bot.bot_name }}</p>
                           </div>
-                          <div class="col-2">
+                          <div class="offset-1">
                               <p class="text-muted mb-0">{{ bot.created_at }}</p>
                           </div>
-                          <div class="col-3">
+                          <div class="offset-1">
                               <a class="btn btn-primary" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
                                   Скачать бота
                               </a>
                           </div>
                           <form action="" method="post">
-                          <div class="col-3">
-                            <input type="submit" name="delete_bot" class="btn btn-danger" value="Удалить бота">
-                        </div>
-                      </form>
+                            <div class="offset-1">
+                              <input type="submit" name="delete_bot" class="btn btn-danger" value="Удалить бота">
+                            </div>
+                          </form>
                       </div>
                   {% endfor %}
                 {% else %}
