fix profile styles

--- a/first/templates/footer.html
+++ b/first/templates/footer.html
@@ -1,4 +1,3 @@
-<!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted mt-5" style="position: relative; margin-top:100%; width: 100%;">
   
     <!-- Section: Links  -->
@@ -13,44 +12,17 @@
               <i class="fas fa-gem me-3"></i>Bot God
             </h6>
             <p>
-              На этом сайте вы можете создать своего уникального телеграмм-бота. Мы предлагаем уникальный набор функций для бота. Начните прямо сейчас!
+              Do it your own!
             </p>
           </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Меню
-            </h6>
-            <p>
-              <a href="/" class="text-reset h-25">Главная</a>
-            </p>
-            <p>
-              <a href="/registration/" class="text-reset">Регистрация</a>
-            </p>
-            <p>
-              <a href="/login/" class="text-reset">Войти</a>
-            </p>
-            <p>
-              <a href="/create_bot/" class="text-reset">Создать бота</a>
-            </p>
-            <p>
-              <a href="/tech_support/" class="text-reset">Помощь</a>
-            </p>
-          </div>
-          <!-- Grid column -->
 
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Контакты</h6>
             <p>
-              <i class="fas fa-envelope me-3"></i>
-              bot_god@gmail.com
+              <i class="fas fa-envelope me-3">bot_god@gmail.com</i>
             </p>
-            <p><i class="fas fa-phone me-3"></i>+7 (967) 182-97-82</p>
           </div>
           <!-- Grid column -->
         </div>
