--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -50,7 +50,7 @@
                           </div>
                           <form action="" method="post">
                             <div class="offset-1">
-                              <input type="submit" name="delete_bot" class="btn btn-danger" value="Удалить бота">
+                              <input type="submit" name="delete_bot" class="btn btn-danger" value="Удалить бота {{ bot.id }}">
                             </div>
                           </form>
                       </div>
