--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -51,7 +51,7 @@
                           <form action="" method="post">
                               {% csrf_token %}
                             <div class="offset-1">
-                              <input type="submit" name="delete_bot" class="btn btn-danger" value="Удалить бота {{ bot.id }}">
+                              <input type="submit" name="delete_bot {{ bot.id }}" class="btn btn-danger" value="Удалить бота">
                             </div>
                           </form>
                       </div>
