--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -13,6 +13,12 @@ a, p, span{
 	font-weight: 400;
 }
 
+body{
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 a.nav-hover{
 	transition: 0.3s;
 }
