--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -14,9 +14,10 @@ a, p, span{
 }
 
 body{
-  min-height: 100%;
+  min-height: 80vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+  background-color: #eee;
 }
 
 a.nav-hover{
