--- a/first/templates/footer.html
+++ b/first/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start bg-light text-muted mt-5" style="position: absolute; width: 100%; bottom: 0;">
+<footer class="text-center text-lg-start bg-light text-muted mt-5" style="width: 100%;">
   
     <!-- Section: Links  -->
     <section class="pt-1">
@@ -32,4 +32,3 @@
     <!-- Section: Links  -->
 
 </footer>
-  <!-- Footer -->
