--- a/first/templates/footer.html
+++ b/first/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start bg-light text-muted mt-5" style="width: 100%;">
+<footer class="text-center text-lg-start bg-light text-muted mt-5" style="width: 100%; height: 10vh;">
   
     <!-- Section: Links  -->
     <section class="pt-1">
