--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #023653; color: white; position: fixed; width: 100%; z-index: 10000; top: 0px">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #023653; color: white; position: fixed; width: 100%; z-index: 10000; top: 0px; height: 10vh;">
     <a class="navbar-brand" href="/" style="width:6%">
             <img src="../../staticroot/media/main_logo_new.png" alt="Logo" width="150%" height="150%" class="d-inline-block align-text-top ms-2">
         </a>
