--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -91,9 +91,9 @@
     new Card("Перезагрузить ПК", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "reboot.png", [1, 0, 0], "wiki.gif", "reboot"),
     new Card("Информация о ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "info.png", [1,0,0], "info.gif", "komp"),
     new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "camera.png", [1,0,0], "capture.gif", "capture"),
-    new Card("Скачивание файла с ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "download.png", [1,0,0], "download.gif", "download"),
-    new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "upload.jpg", [1, 0, 0], "upload.gif", "upload"),
-
+    new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "download.png", [1,0,0], "upload.gif", "download"),
+    new Card("Скачивание файла с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "upload.jpg", [1, 0, 0], "download.gif", "upload"),
+    
     new Card("Pdf ==> Docx", "Данная функция конвертирует файлы формата PDF в файлы формата DOCX", "pdf_to_docx.png", [1,1,1], "wiki.gif", "---"),
     new Card("Pdf ==> Jpg", "Данная функция конвертирует файлы формата PDF в файлы формата jpg", "pdf_to_jpg.svg", [1,1,1], "wiki.gif", "---"),
     new Card("MP4 ==> MP3", "Данная функция конвертирует файлы формата MP4 в файлы формата MP3", "mp4_to_mp3.jpg", [1, 0, 0], "wiki.gif", "---"),
