--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -81,27 +81,27 @@
 
     //создание объектов карточек
 
-    let cards = [new Card("Вики", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "wiki.svg", [1,1,1], "wiki.gif", "wiki", "Поиск по слову в википедии"),
+    let cards = [new Card("Вики", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "wiki.svg", [1,1,1], "wiki.gif", "wiki", "слово_для_поиска"),
     new Card("Анекдот", "Данная функция отправляет вам случайный анекдот", "smile.png", [1,1,1], "anekdot.gif", "anekdot", "Высылает анекдот"),
-     new Card("Панда", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "panda.jpg",  [1,1,1], "panda.gif", "panda", "Присылает изображения панды"),
+     new Card("Панда", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "panda.jpg",  [1,1,1], "panda.gif", "panda", ""),
 
-    new Card("Получить изображение с веб-камеры ПК", "Данная функция позволяет дистанционно получить изображение с веб-камеры компьютера", "webcam.png", [1,1,1], "webcam.gif", "webcam", "Присылает изображение с камеры"),
+    new Card("Получить изображение с веб-камеры ПК", "Данная функция позволяет дистанционно получить изображение с веб-камеры компьютера", "webcam.png", [1,1,1], "webcam.gif", "webcam", ""),
     new Card("Поменять обои на ПК", "Данная функция меняет обои на вашем компьютере", "wallpaper.jpg", [1,0,0], "wiki.gif", "wallpaper"),
     new Card("Выключить ПК", "Данная функция обеспечивает возможность удаленного выключения компьютера", "turnoff.png", [1, 0, 0], "wiki.gif", "turnoff"),
-    new Card("Перезагрузить ПК", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "reboot.png", [1, 0, 0], "wiki.gif", "reboot"),
-    new Card("Информация о ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "info.png", [1,0,0], "info.gif", "komp"),
-    new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "camera.png", [1,0,0], "capture.gif", "capture"),
-    new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "upload.jpg", [1,0,0], "download.gif", "download"),
-    new Card("Скачивание файла с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "download.png", [1, 0, 0], "upload.gif", "upload"),
+    new Card("Перезагрузить ПК", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "reboot.png", [1, 0, 0], "wiki.gif", ""),
+    new Card("Информация о ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "info.png", [1,0,0], "info.gif", "komp", ""),
+    new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "camera.png", [1,0,0], "capture.gif", "capture", ""),
+    new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "upload.jpg", [1,0,0], "download.gif", "download", "\n-Файл"),
+    new Card("Скачивание файла с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "download.png", [1, 0, 0], "upload.gif", "upload", "\n-Путь_до_файла"),
     
-    new Card("Pdf ==> Docx", "Данная функция конвертирует файлы формата PDF в файлы формата DOCX", "pdf_to_docx.png", [1,1,1], "wiki.gif", "---"),
-    new Card("Pdf ==> Jpg", "Данная функция конвертирует файлы формата PDF в файлы формата jpg", "pdf_to_jpg.svg", [1,1,1], "wiki.gif", "---"),
-    new Card("MP4 ==> MP3", "Данная функция конвертирует файлы формата MP4 в файлы формата MP3", "mp4_to_mp3.jpg", [1, 0, 0], "wiki.gif", "---"),
+    new Card("Pdf ==> Docx", "Данная функция конвертирует файлы формата PDF в файлы формата DOCX", "pdf_to_docx.png", [1,1,1], "wiki.gif", "pdf2docx", "\n-pdf_файл"),
+    new Card("Pdf ==> Jpg", "Данная функция конвертирует файлы формата PDF в файлы формата jpg", "pdf_to_jpg.svg", [1,1,1], "wiki.gif", "pdf2озп", "\n-pdf_файл"),
+    new Card("MP4 ==> MP3", "Данная функция конвертирует файлы формата MP4 в файлы формата MP3", "mp4_to_mp3.jpg", [1, 0, 0], "wiki.gif", "mp42mp3", "\n-mp4_файл"),
 
-    new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "api.png", [1,1,1], "wiki.gif", "---"),
-    new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "youtube_downloader.png", [1,1,1], "yt.gif", "yt", "Скачивание видео или плейлиста с ютуба"),
-    new Card("TTS", "Данная функция преобразовывает текст в речь, синтезируя голос", "tts_logo.png", [1,1,1], "tts.gif", "tts", "Озвучит написанный вами текст"),
-    new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "stt_logo.png", [1,1,1], "stt.gif", "stt", "Превратит голосовое сообщение в текст"),]
+    new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "api.png", [1,1,1], "wiki.gif", "add_api\n/run_api\n/list_api\n/delete_api", "\n-pdf_файл\n-pdf_файл\n-pdf_файл\n-pdf_файл"),
+    new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "youtube_downloader.png", [1,1,1], "yt.gif", "", "Ссылка_на_видео/плейлист"),
+    new Card("TTS", "Данная функция преобразовывает текст в речь, синтезируя голос", "tts_logo.png", [1,1,1], "tts.gif", "tts", "\n-Текст"),
+    new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "stt_logo.png", [1,1,1], "stt.gif", "", "Работает при отправке ГС"),]
 
 
     //добавление карточкек в html
